# fallout2-ce

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INSTALL.md  README.md  SFALL_COMPATIBILITY.md  build_mac_arm_release.sh
.github/workflows/: auto-format.yml  ci-build.yml  release.yml
cmake/: gitver.cmake
os/android/app/: build.gradle
os/ios/: Info.plist
os/macos/: Info.plist
scripts/: build-linux.sh  build-windows.bat
sfall_testing/: README.md  gl_test_worldmap.ssl
sfall_testing/hooks/: gl_afterhitroll.ssl  gl_ammocost.ssl  gl_calcapcost.ssl  gl_combatturn.ssl  gl_encounter.ssl  gl_inventorymove.ssl  gl_movecost.ssl  gl_ondeath.ssl  gl_resttimer.ssl  gl_steal.ssl  gl_withinperception.ssl
src/: actions.cc  actions.h  animation.cc  art.cc  audio.cc  audio_engine.cc  automap.cc  character_editor.cc  character_editor.h  character_selector.cc  combat.cc  combat.h  combat_ai.cc  combat_ai.h  combat_defs.h  config.cc  config.h  content_config.cc  content_config.h  critter.cc  dbox.cc  dfile.cc  dialog.cc  display_monitor.cc  draw.cc  elevator.cc  endgame.cc  file_find.h  file_utils.cc  game.cc  game_config.cc  game_config_migration.cc  game_config_migration.h  game_dialog.cc  game_mouse.cc  game_movie.cc  game_sound.cc  graph_lib.cc  heap.cc  input.cc  (+84 more)
src/mapper/: mp_targt.cc
tests/: CMakeLists.txt  test_animation.cc  test_audio_fixes.cc  test_character_editor.cc  test_combat.cc  test_combat_hooks.cc  test_common_stubs.cc  test_config.cc  test_config_migration.cpp  test_config_sfall.cc  test_criticals.cc  test_critter.cc  test_dbox.cc  test_dialog.cc  test_endgame.cc  test_fixes_hooks.cc  test_fixes_metarules.cc  test_fixes_opcodes.cc  test_fixes_saveload.cc  test_fixes_stage6_arithmetic.cc  test_fixes_stage6_combat.cc  test_fixes_stage6_misc.cc  test_fixes_stage6_saveload.cc  test_game.cc  test_game_config_migration.cc  test_game_core_fixes.cc  test_game_dialog.cc  test_game_mouse.cc  test_global_vars.cc  test_hooks_comprehensive.cc  test_hooks_new_types.cc  test_hooks_return_values.cc  test_interpreter_core.cc  test_interpreter_extra.cc  test_interpreter_fixes.cc  test_inventory.cc  test_item.cc  test_loadsave.cc  test_loadsave_integration.cpp  test_map.cc  (+48 more)
tools/: dat_archive.cc  dat_archive.h  dat_tool.cc
